lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs.less
/*-------------------------------------------
------------------VARIABLES LESS-------------
*/


@labsBlockBackgroundColor: @white;
@labsBlockHeaderBackgroundColor: @labsBlockBackgroundColor;

@labsModalBackgroundColor: @labsBlockBackgroundColor;

@labsCkeipHoverBackgroundColor: #eeeeee;

@labsNewsSummaryWidth: auto;

@navbarHeight:            30px;
@zindexDropdown:          1; /* pour que les dropdowns soient cachées quand la popup 'waitingPopup' est affichée */


@labsContentBackgroundColor: @white;

// Sprite icons path
@iconWhiteSpritePath:     "../../img/glyphicons-halflings-white.png";


/*---------------------------------------------------
---------------------FK------------------------------
*/

#FKerrorLogin {
  color: @errorText;
  display:none;
  line-height: @navbarHeight;
}

#FKtopContent {
    margin: auto;
	margin-bottom: 8px;
	.box-shadow(1px 1px 12px #555);
}

#FKtopContent{
    .top{
        height: 30px;
        padding-top: 5px;
        padding-right: 15px;
        
        >div#notification {
            float:right;
            margin-right: 10px;
        }
        
        >div#siteMap {
            float:right;
            margin-top: 0px;
        }
    }
    .bottom{
        width: 100%;
        height: 80px;
        margin-top: -18px;
    }
}

#FKbacktointralm {
  /* On fixe la taille en pixel car on a un fond  fixé en px */
  font-size: 11px;
  background-image: url(../../images/theme/backIntralm.png);
  width: 110px;
  height: 25px;
  margin-top: 5px;
  margin-left: 5px;
  padding-left: 27px;
  padding-top: 1px;
  float: left;
  background-repeat: no-repeat;
}

#FKfooter {
  background: url(../../images/theme/footer_bg.png) repeat-x scroll center
    bottom #FFFFFF;
  background-color: white;
  color: @textColor;
  text-decoration: none;
  .box-shadow(1px 1px 12px #555);
  text-align: left;
}

#FKfooter_logo_lm {
  background-image: url(../../images/theme/footer_logo_lm.png);
  height: 71px;
  width: 77px;
  float: right;
  margin: 10px 10px 10px 10px;
}

#FKfooter_bottom {
  background: url(../../images/theme/footer_liseret.png) no-repeat scroll
    0 0 transparent;
  height: 35px;
}

#FKfooter_logo_adeo {
  background: url(../../images/theme/footer_adeo.png) no-repeat scroll 0 0
    transparent;
  margin-right:10px;
  width: 160px;
  height: 28px;
  float: right;
}



/*---------------------------------------------------------
---------------------SIDEBAR--------------------------------
*/


//siteMap
div#siteMap {
    margin-top: 6px;
}

// External URL
.actionExternalURL {
    text-align: right;
    float: right;
    >IMG {
	    //float: left;
	    padding: 0 0 0 0;
	    margin: 0 0 0 -3px;
	    cursor:pointer;
	}
	&.actionAdd {
	    width: 100%;
	}
}

// sidebar blocks
.bloc {
  word-wrap: break-word;
  background-color: @labsBlockBackgroundColor;
  margin-bottom: 10px;
  min-height: 40px;
  border: 1px solid #eee;
  border: 1px solid rgba(0,0,0,.05);
  padding:5px;
  .border-radius(4px);
  .box-shadow();

  .header {
    margin:-5px -5px 0px -5px;
    min-height:20px;
    padding-left:1em;
    .border-radius(4px 4px 0px 0px);
    #gradient > .vertical-three-colors(@labsBlockHeaderBackgroundColor, @labsBlockHeaderBackgroundColor, 25%, darken(@labsBlockHeaderBackgroundColor, 10%));

    a {
      color: @gray;
    }
  }

  &.welcome {
    float:left;
    margin-right:8px;
  }

}

//Comments
.labscomments {

	&.text{
    	width:510px;
    	height:75px;
    }

	&.comment{
      display: block;
	  padding: 5px;
	  border: 1px dashed #CCC;
	  padding: 5px 5px 0;
    }
    
    &.comment > span{
	  display: block;
	  margin-bottom: 10px;
	  color: black;
	}

	&.display{
		background-image: url(../../../images/comments.png);
		background-repeat: no-repeat;
		background-position:center;
		cursor: pointer;
		width: 15px;
		
			&.noComments{
				opacity:0.3;
			}
	}
	
	&.noComments{
		opacity:0.3;
	}

	&.delete{
	  background-image: url(../../images/x.gif);
	  background-repeat: no-repeat;
	  background-position:center;
	  height: 100%;
	  position: relative;
	  top: 0px;
	  width: 15px;
	  right: 5px;
	  cursor: pointer;
	  float: right;
	  margin-bottom: 0;
	}
	
	&.author {
	  color:grey;
	  font-style:italic;
	  padding-top:5px;
	}
	
	&.by {
	  font-size: 11px;
  	  display: inline-block;
  	  width: 100%;
	}
	
	&.by > span {
	  color: #ff9a00;
	  font-weight: bold;
	}
	
	&.footer {
	  display: inline;
	  font-size: 10px;
  	  color: #797a7b;
 	  margin-top: 3px;
 	  margin-bottom:0;
	}
	
	&.footer > span {
	  
	}
}

li.labscomments {
  position: relative;
  padding-left: 0px;
  padding-bottom: 15px;
}


//Last message
.lastMessage {

	height:196px;
	.itemList {
		height:155px;

	}
	.item {
		cursor:pointer;
		border-radius:10px;
		margin-top:10px;
	}
	.item:hover {
		text-decoration:underline; 
	}
	.browseLastMsg {
		float:right;
	}
	.date {
		text-decoration:underline; 
	}
	.title {
		font-size: @baseFontSize;
    	font-weight:bold;
	}
	.desc {
		font-style:italic;
	}
	hr {
	  border-bottom: 1px solid lighten(@hrBorder, 25%);
	}
	a:hover{
		.opacity(50);
	}
}


/*--------------------------------------------------------
-------------------------MODAL DIALOG2--------------------
*/


// modal popups
.modal, .modal-footer {
    background-color: @labsModalBackgroundColor;
}

.modal {
  max-height: none;
  overflow: hidden;
  top: 25%;
  left: 50%;
 }
 
.modal-overlay{
  z-index: 101;
}

.dropdown-menu{
	z-index: 100;
}

.navbar{
	z-index: 95;
}

.homepage {
	background-image: url(/nuxeo/icons/home.gif);
	background-repeat: no-repeat;
	background-position: left center;
	padding: 0 0 0 20px;
	//TODO
	/*background-image: url("less/@{iconWhiteSpritePath}");
	background-position: 0      -24px;*/
}

.breadcrumb span.divider:after {
	content: "/";
}

.treeview ul {
    background-color: transparent;
}


#jstree {
   background-color: transparent;
   a {
    	color: @textColor;
    }
}

.dropzonehighlighted {
    background-color: lightgrey;
    border-color: white;
    color: white;
}

.jcrop img{
	max-width: none
}

.jsTreeControlsContent {
    float: left;
    max-width: 269px;
}

.ckeipHoverBackgroundColor{
	background-color: @labsCkeipHoverBackgroundColor;
}

#modifyThemeParameters{
	float: right;
}

#logoImgId {
	position:absolute;
}

.logoDragMsg {
	font-size: 12px;
	position:absolute;
	z-index:90;
}

.logoDragMsg span {
	background:#DFDFDF;
	font-weight:bold;
}

.logoImgId-move {
	border: 2px dashed #989898;
	padding: 0px;
	cursor:pointer;
	z-index:90;
}

.logoImgId-notmove {
	border: 0;
	padding: 2px;
	cursor: normal;
	z-index:2;
}

.labssite-logo-move {
	position:absolute;
	z-index:90;
}

section.labsnews {
	border: 1px solid @grayLight;
	.border-radius(8px);
	margin-bottom: 8px;
	padding: 4px;
	width: @labsNewsSummaryWidth;
}


[class^="icon-"],
[class*=" icon-"] {
    padding-right: 2px;
}

.btn {
	position: relative;
    z-index: 3;
}

input,
button,
select,
textarea {
  font-family: @baseFontFamily;
}

